# divera-status-tracker-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  data.rs  fetcher.rs  io.rs  main.rs
