[package]
name = "ff-divera-status-tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
either = "1.11.0"
glob = "0.3.1"
# Needed to use rustls
imap = { git = "https://github.com/jonhoo/rust-imap", default-features = false, features = ["rustls-tls"] }
lazy_static = "1.4.0"
mailparse = "0.14.1"
polars = { version = "0.38.3", features = ["lazy", "dtype-struct", "parquet"] }
# incomaptile with newer versions of polars
polars_excel_writer = { git = "https://github.com/jmcnamara/polars_excel_writer" }
